# URLSummarizerAPI-Using-ML-DL

./: app.py  pyproject.toml  requirements.txt
